@@ -30,7 +30,6 @@ namespace MySql.Data.Types
 	/// </summary>
 	public class MySqlDateTime : MySqlValue, IConvertible, IComparable
 	{
-		private	DateTime		comparingDate;
 		private int	year, month, day, hour, minute, second;
 		private static string	fullPattern;
 		private static string	shortPattern;
@@ -47,10 +46,10 @@ namespace MySql.Data.Types
 
 			// we construct a date that is guaranteed not have zeros in the date part
 			// we do this for comparison 
-			DateTime d = DateTime.MinValue;
-			d = d.AddYears(year+1).AddMonths(month+1).AddDays(day+1).AddHours(hour);
-			d = d.AddMinutes(minute).AddSeconds(second);
-			comparingDate = d;
+//			DateTime d = DateTime.MinValue;
+//			d = d.AddYears(year+1).AddMonths(month+1).AddDays(day+1).AddHours(hour);
+//			d = d.AddMinutes(minute).AddSeconds(second);
+//			comparingDate = d;
 
 			if (fullPattern == null)
 				ComposePatterns();
@@ -367,16 +366,6 @@ namespace MySql.Data.Types
 			return val.GetDateTime();
 		}
 
-		private void ComputeTicks()
-		{
-			int[] daysInMonths = new int[12] { 31, 28, 31, 30, 31, 30, 31, 30, 31, 30, 31, 30 };
-
-			if (DateTime.IsLeapYear( Year ))
-				daysInMonths[1]++;
-			
-			
-		}
-
 		#region IConvertible Members
 
 		ulong IConvertible.ToUInt64 (IFormatProvider provider)
@@ -471,9 +460,27 @@ namespace MySql.Data.Types
 
 		int IComparable.CompareTo(object obj)
 		{
-			MySqlDateTime other = (MySqlDateTime)obj;
+			MySqlDateTime otherDate = (MySqlDateTime)obj;
 
-			return comparingDate.CompareTo( other.comparingDate );
+			if (Year < otherDate.Year) return -1;
+			else if (Year > otherDate.Year) return 1;
+
+			if (Month < otherDate.Month) return -1;
+			else if (Month > otherDate.Month) return 1;
+
+			if (Day < otherDate.Day) return -1;
+			else if (Day > otherDate.Day) return 1;
+
+			if (Hour < otherDate.Hour) return -1;
+			else if (Hour > otherDate.Hour) return 1;
+
+			if (Minute < otherDate.Minute) return -1;
+			else if (Minute > otherDate.Minute) return 1;
+
+			if (Second < otherDate.Second) return -1;
+			else if (Second > otherDate.Second) return 1;
+
+			return 0;
 		}
 
 		#endregion
