@@ -6,6 +6,7 @@
 	Fixed problem parsing stored procedure parameter defs such as OUT val INT  UNSIGNED
 	Bug #7623  	Adding MySqlParameter causes error if MySqlDbType is Decimal [fixed]
 	Now supports the new decimal type introduced in 5.0.3
+	Bug #8929  	Timestamp values with a date > 10/29/9997 cause problems [fixed]
 	
 1-20-05 - Version 1.0.4  
 
